pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__160-html_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/160-html_blocks.md
---
[32m<table><tr><td>
[0m[32mfoo
[0m[32m</td></tr></table>
[0m
