pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec__161-html_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 159
expression: "replace_system_specific_urls(render_to_string(markdown_file,\n&iterm2_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/161-html_blocks.md
---
[32m<div></div>
[0m[32m``` c
[0m[32mint x = 33;
[0m[32m```
[0m
